--- a/style.css
+++ b/style.css
@@ -2,28 +2,351 @@
     font-family: NeuePowerTrial-Regular;
     src: url(fonts/NeuePowerTrial-Regular.ttf);
 }
-body {
-    background-color: rgb(153, 204, 225);
-}
-h1 {
-    font-family: NeuePowerTrial-Regular, sans-serif;
-    font-size: 6em;
-    text-align: center;
+
+*{
+    /* Disable user select across browser types */
+    user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
-h2 {
-    font-family: NeuePowerTrial-Regular, sans-serif;
-    font-size: 2em;
-    text-align: center;
+body {
+    background-color: rgb(16,69,71);
+    margin: 0px;
 }
+
+#menu {  
+    align-items: center;
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+  }
+  
+  #menu-items {
+    margin-left: clamp(4rem, 20vw, 48rem);
+    position: relative;
+    z-index: 2;
+  }
+  
+  #menu[data-active-index="0"] > #menu-background-pattern {
+    background-position: 0% -25%;
+  }
+  
+  #menu[data-active-index="1"] > #menu-background-pattern {
+    background-position: 0% -50%;
+  }
+  
+  #menu[data-active-index="2"] > #menu-background-pattern {
+    background-position: 0% -75%;
+  }
+  
+  #menu[data-active-index="3"] > #menu-background-pattern {
+    background-position: 0% -100%;
+  }
+  
+  #menu[data-active-index="0"] > #menu-background-image {
+    background-position: center 45%;
+  }
+  
+  #menu[data-active-index="1"] > #menu-background-image {
+    background-position: center 50%;
+  }
+  
+  #menu[data-active-index="2"] > #menu-background-image {
+    background-position: center 55%;
+  }
+  
+  #menu[data-active-index="3"] > #menu-background-image {
+    background-position: center 60%;
+  }
+
+  
+  #menu-background-pattern {
+    background-image: radial-gradient(
+      rgba(255, 255, 255, 0.1) 9%, 
+      transparent 9%
+    );
+    background-position: 0% 0%;
+    background-size: 12vmin 12vmin;
+    height: 100vh;
+    left: 0px;
+    position: absolute;
+    top: 0px;
+    transition: opacity 800ms ease, 
+      background-size 800ms ease,
+      background-position 800ms ease;
+    width: 100vw;
+    z-index: 1;
+  }
+  
+  #menu-background-image {
+    background-image: url("assets/nypiccrop.jpg");
+    background-position: center 40%;
+    background-size: 110vmax;
+    height: 100%;
+    left: 0px;  
+    opacity: 0.15;
+    position: absolute;
+    top: 0px;
+    transition: opacity 800ms ease,
+      background-size 800ms ease,
+      background-position 800ms ease;
+    width: 100%;
+    z-index: 0;
+  }
+  
+  #menu-items:hover ~ #menu-background-pattern {
+    background-size: 11vmin 11vmin;
+    opacity: 0.5;
+  }
+  
+  #menu-items:hover ~ #menu-background-image {
+    background-size: 100vmax;
+    opacity: 0.1;
+  }
+  
+  #menu-items:hover > .menu-item {
+    opacity: 0.3;
+  }
+  
+  #menu-items:hover > .menu-item:hover {
+    opacity: 1; 
+  }
+.menu-item {
+    color: rgb(175, 146, 157);
+    font-size: clamp(3rem, 8vw, 8rem);
+    font-family: NeuePowerTrial-Regular, sans-serif;
+    
+    display: block;
+    text-decoration: none;
+    padding: clamp(0.25rem, 0.5vw, 1rem) 0rem;
+    transition: opacity 400ms ease;
+}
+
+
+.resume {
+    background: white;
+    border-radius: 1vh;
+    font: black;
+    font-size: 1.5em;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+    margin: 5rem;
+    padding: 30px;
+}
+
+
+
+#top {
+    -moz-border-radius-topleft: 1vh;
+    -moz-border-radius-topright: 1vh;
+    -webkit-border-top-left-radius: 1vh;
+    -webkit-border-top-right-radius: 1vh;
+    border-top-left-radius: 1vh;
+    border-top-right-radius: 1vh;
+    background-image: url("assets/nypiccropprof.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+}
+
 
 a {
-    text-decoration: none;
-    color: rgba(0,0,0,0.8);
-    display: block;
-    text-align: center;
+  text-decoration: none;
 }
 
-a:hover {
-    color: rgba(0, 0, 255, 0.8);
+#right {
+  flex-basis: 55%;
+    display: grid;
+    grid-template-columns: 1.5fr 1fr;
+    gap: 1.25em;
+    padding: 1.25em;
+    width: 60vw;
+    height: 85vh;
+    min-height: 1080px;
+    min-width: 500px;
+    font-size: 1.25em;
+    line-height: 0.25;
+}
+
+.resume-header {
+    color: rgb(16,69,71);
+    font-family: NeuePowerTrial-Regular, sans-serif;
+}
+
+.resume-title {
+    padding-left: 1em;
+    line-height: 1;
+}
+
+.resume-text {
+    padding-left: 2.2em;
+    line-height: 0.5;
+    color: black;
+}
+
+.resume-date {
+    padding-left: 3em;
+    font-size: 0.66em;
+}
+.resume-subtext {
+    font-size: 1em;
+    padding-left: 2.2em;
+    line-height: 1;
+}
+
+#page-title {
+    text-align: center;
+    font-family: NeuePowerTrial-Regular, sans-serif;
+    font-size: 3vw;
+    color: white;
+}
+
+#projects-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.project-card {
+    background-color: white;
+    width: 20%;
+    margin: 50px;
+    min-width: 500px;
+    border-radius: 15px;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(0,0,0,0.8);
+    padding-bottom: 15px;
+    display: grid;
+    grid-template-rows: 5fr 1fr 1fr;
+    color: rgb(16,69,71);
+}
+
+.project-pic{
+    -moz-border-radius-topleft: 1vh;
+    -moz-border-radius-topright: 1vh;
+    -webkit-border-top-left-radius: 1vh;
+    -webkit-border-top-right-radius: 1vh;
+    border-top-left-radius: 1vh;
+    border-top-right-radius: 1vh;
+}
+
+#mvpic{
+    background: url("assets/AVizPic.PNG");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.project-title {
+    text-align: center;
+    font-family: NeuePowerTrial-Regular, sans-serif;
+    font-size: 1em;
+}
+
+.project-links {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 25px;
+    color: orange;
+}
+
+.link {
+    font-size: 1em;
+    text-align: center;
+    color: rgb(16,69,71);
+}
+
+#chesspic {
+  background: url("assets/chesspic.PNG");
+  background-size: cover;
+  background-repeat: no-reapeat;
+}
+
+#p5runner {
+  background: url("assets/p5runner.PNG");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#kandinsky {
+  background: url("assets/kandinsky.PNG");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.contact {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
+}
+
+.btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 40px 80px;
+  background: #0077B5;
+  color: #fff;
+  font-size: 32px;
+  font-weight: bold;
+  text-decoration: none;
+  border-radius: 10px;
+  margin: 0 20px;
+  transition: all 0.3s ease-in-out;
+  font-family: NeuePowerTrial-Regular, sans-serif;
+}
+
+.btn:hover {
+  transform: scale(1.1);
+  background: #005F8D;
+  cursor: pointer;
+}
+
+.github {
+  background-image: url("assets/github.svg");
+  background-repeat: no-repeat;
+  background-size: 30px;
+  background-position: 30px center;
+}
+
+.linkedin {
+  background-image: url("assets/linkedin.svg");
+  background-repeat: no-repeat;
+  background-size: 30px;
+  background-position: 30px center;
+}
+
+.chess {
+  background-image: url("assets/chess.svg");
+  background-repeat: no-repeat;
+  background-size: 30px;
+  background-position: 30px center;
+}
+
+@media(max-width: 600px){
+  .center{
+    flex-direction: column;
+  }
+  .btn{
+    margin: 10px 0;
+  }
+}
+
+
+
+#back-button {
+  margin: 10px;
+  margin-top: 10px;
+  background: none;
+  border: none;
+  padding: 10px 20px;
+  font-size: 1.5em;
+  font-family: NeuePowerTrial-Regular, sans-serif;
+  color: white;
 }
